# kernel

./: .bazelrc  README.md  WORKSPACE
.devcontainer/: Dockerfile  README.md  devcontainer.json  world
.devcontainer/portage/: make.conf  package.accept_keywords  repos.conf
.devcontainer/portage/package.use/: bazel  curl  edk2-ovmf  grub  python  qemu  seabios
build_defs/: README.md  asm.bzl  gcc.bzl  grub.bzl  qemu.bzl
host/: README.md  compiler.BUILD  grub_platforms.BUILD  qemu.BUILD
local/: compiler.BUILD  grub.BUILD
src/: BUILD.bazel  README.md  grub.cfg
src/arch/: BUILD.bazel  README.md
src/arch/i686/: BUILD.bazel  boot.S  checks.S  gdt.S  idle.S  idt.S  interrupts.S  multiboot2.S  paging.S
src/arch/x86_64/: BUILD.bazel  checks.S  crtn.S  gdt.S  idle.S  idt.S  interrupts.S  multiboot2.S
src/boot/: BUILD.bazel  gdt.c  idt.c  multiboot2_info.c
src/include/: BUILD.bazel  README.md  ssp.h  stdio.h  stdlib.h  string.h
src/include/boot/: gdt.h  idt.h  multiboot2_info.h
src/include/kernel/: framebuffer.h  gdt.h  idt.h  io.h  isr.h  kbd.h  kernel.h  keyboard.h  kheap.h  log.h  multiboot2.h  paging.h  timer.h  tty.h  vga.h
src/include/sys/: cdefs.h
src/kernel/: BUILD.bazel  README.md  ansi.c  framebuffer.c  gdt.c  idt.c  interrupts.c  io.c  isr.c  kbd.c  kernel.c  keyboard.c  kheap.c  linker.ld  log.c  multiboot2.c  paging.c  timer.c  tty.c
src/lib/: BUILD.bazel  README.md
src/lib/ssp/: BUILD.bazel  ssp.c
src/lib/stdio/: BUILD.bazel  print.c  printf.c  putchar.c  vprintf.c
src/lib/stdlib/: BUILD.bazel  abort.c  epanic.c  halt.c  itoa.c  panic.c
src/lib/string/: BUILD.bazel  memmove.c  strcat.c  strcpy.c
toolchain/: BUILD  README.md  toolchain.bzl
