load("//build_defs:gcc.bzl", "gcc_binary", "gcc_builtin", "gcc_executable")

gcc_builtin(name = "crtbegin")

gcc_builtin(name = "crtend")

gcc_binary(
    name = "lib",
    srcs = [
        "main.c",
        "tty.c",
    ],
    includes = ["//src/include"],
)

gcc_executable(
    name = "kernel",
    srcs = [
        ":lib",
        "//src/arch",
        "//src/lib:libk",
    ],
    config = "linker.ld",
    crtbegin = ":crtbegin",
    crtend = ":crtend",
    crti = "//src/arch:crti",
    crtn = "//src/arch:crtn",
    visibility = ["//visibility:public"],
)
