load("//build_defs:gcc.bzl", "gcc_library")

gcc_library(
    name = "lib",
    srcs = [
        "//src/lib/ssp",
        "//src/lib/stdio",
        "//src/lib/stdlib",
        "//src/lib/string",
    ],
)

gcc_library(
    name = "libk",
    srcs = [
        "//src/lib/ssp:libk",
        "//src/lib/stdio:libk",
        "//src/lib/stdlib:libk",
        "//src/lib/string:libk",
    ],
    visibility = [
        "//src:boot_internal",
        "//src:kernel_internal",
    ],
)
