load("//build_defs:gcc.bzl", "gcc_binary")

package(default_visibility = ["//src:arch_internal"])

gcc_binary(
    name = "i686",
    srcs = [
        "boot.S",
        "checks.S",
        "gdt.S",
        "idt.S",
        "interrupts.S",
        "multiboot2.S",
    ],
    includes = ["//src/include"],
)

gcc_binary(
    name = "crti",
    srcs = ["crti.S"],
)

gcc_binary(
    name = "crtn",
    srcs = ["crtn.S"],
)
