load("//build_defs:gcc.bzl", "gcc_binary")

package(default_visibility = ["//src:arch_internal"])

gcc_binary(
    name = "x86_64",
    srcs = [
        "boot.S",
        "multiboot2.S",
    ],
    includes = ["//src/include"],
)

gcc_binary(
    name = "crti",
    srcs = ["crti.S"],
)

gcc_binary(
    name = "crtn",
    srcs = ["crtn.S"],
)
